fix spacing and buttons

--- a/assets/style/_scss/components/_box.scss
+++ b/assets/style/_scss/components/_box.scss
@@ -106,6 +106,8 @@
   margin-top: -10px;
   margin-right: 60px;
   float: right;
+  text-decoration: none;
+  line-height: 1.4;
 }
 
 .box-button-plain {
